--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,200;10..48,300;10..48,400;10..48,500;10..48,600;10..48,700;10..48,800&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -25,4 +27,5 @@ body {
 		)
 		rgb(var(--background-start-rgb));
 	background-color: darkslategrey;
+	font-family: 'Bricolage Grotesque', sans-serif;
 }
