--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,65 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,200;10..48,300;10..48,400;10..48,500;10..48,600;10..48,700;10..48,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-	--foreground-rgb: 0, 0, 0;
-	--background-start-rgb: 214, 219, 220;
-	--background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-	:root {
-		--foreground-rgb: 255, 255, 255;
-		--background-start-rgb: 0, 0, 0;
-		--background-end-rgb: 0, 0, 0;
-	}
-}
-
 body {
-	color: rgb(var(--foreground-rgb));
-	background: linear-gradient(
-			to bottom,
-			transparent,
-			rgb(var(--background-end-rgb))
-		)
-		rgb(var(--background-start-rgb));
-	background-color: darkslategrey;
-	font-family: 'Bricolage Grotesque', sans-serif;
-	-webkit-tap-highlight-color: transparent;
-	transition: background-color 0.5s ease-in-out;
-}
-
-.border-animation {
-	position: relative;
-	overflow: hidden;
-}
-
-.border-animation::after {
-	content: '';
-	display: block;
-	height: 2px;
-	width: 100%;
-	background-color: rgb(69, 165, 165);
-	transform: scaleX(0);
-	transition: transform 0.3s ease-in-out;
-}
-
-.border-animation:hover::after {
-	transform: scaleX(1);
-}
-
-.fade-in {
-	animation: fadeInAnimation 0.5s ease-in-out;
-}
-
-@keyframes fadeInAnimation {
-	from {
-		opacity: 0;
-	}
-	to {
-		opacity: 1;
-	}
+	background-color: black;
+	font-family: 'Roboto', sans-serif;
 }
