--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-	font-family: 'Roboto', sans-serif;
+	color: white;
+	transition: all 0.5s linear;
+}
+::selection {
+	background: rgba(148, 143, 143, 0.3);
+	color: white;
 }
